@@ -23,6 +23,7 @@ Bugs fixed
   To get the old behavior back, add ``highlight_language = "python"`` to conf.py.
 * #2329: Refresh environment forcely if source directory has changed.
 * #2331: Fix code-blocks are filled by block in dvi; remove ``xcdraw`` option from xcolor package
+* Fix the confval type checker emits warnings if unicode is given to confvals which expects string value
 
 Documentation
 -------------
